[workspace]

members = [
    "types",
    "contracts-helper",
    "lib/bridge-lockscript-lib",
    "lib/recipient-typescript-lib",
    "contracts/bridge-lockscript",
    "contracts/recipient-typescript",
]
exclude = [
    "tests",
]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
